--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta name="getStyles" sm="" md="" lg="" xl="" xxl="" />
 	</head>
 	<body>
-		<header class="flex bg-light h-80 p-xl sticky t-0 z-full">
+		<header class="flex bg-light h-80 p-xl sticky t-0 z-10">
 			<a href="/" class="fs-xxl flex aic jcc font-code gap-sm">Priyanka<span class="txt-red">PRA</span></a>
 		</header>
 		<main class="p-xl">
@@ -31,18 +31,18 @@
 			<div class="flex fdc gap-lg">
 				<div class="flex-1 bg-white p-lg br-8">
 					<h3 class="fs-lg fw-600 pb-md">Personal Relationship Advisory</h3>
-					<p class="fs-md fw-300 pb-md">Get Personalized Relationship Advice from Experts</p>
-					<a href="#" class="px-lg py-md fs-md bg-red txt-white hover-bg-dark flex aic jcc">Learn More<i class='bx bx-right-arrow-alt fs-lg'></i></a>
+					<p class="fs-md fw-300 pb-lg">Get Personalized Relationship Advice from Experts</p>
+					<a href="#" class="px-lg py-8 fs-md bg-red txt-white hover-bg-dark flex aic jcc">Learn More<i class='bx bx-right-arrow-alt fs-lg'></i></a>
 				</div>
 				<div class="flex-1 bg-white p-lg br-8">
 					<h3 class="fs-lg fw-600 pb-md">Couples Therapy</h3>
-					<p class="fs-md fw-300 pb-md">Resolve Conflicts and Strengthen Your Relationship</p>
-					<a href="#" class="px-lg py-md fs-md bg-red txt-white hover-bg-dark flex aic jcc">Learn More<i class='bx bx-right-arrow-alt fs-lg'></i></a>
+					<p class="fs-md fw-300 pb-lg">Resolve Conflicts and Strengthen Your Relationship</p>
+					<a href="#" class="px-lg py-8 fs-md bg-red txt-white hover-bg-dark flex aic jcc">Learn More<i class='bx bx-right-arrow-alt fs-lg'></i></a>
 				</div>
 				<div class="flex-1 bg-white p-lg br-8">
 					<h3 class="fs-lg fw-600 pb-md">Family Counseling</h3>
-					<p class="fs-md fw-300 pb-md">Build Stronger Bonds with Your Family Members</p>
-					<a href="#" class="px-lg py-md fs-md bg-red txt-white hover-bg-dark flex aic jcc">Learn More<i class='bx bx-right-arrow-alt fs-lg'></i></a>
+					<p class="fs-md fw-300 pb-lg">Build Stronger Bonds with Your Family Members</p>
+					<a href="#" class="px-lg py-8 fs-md bg-red txt-white hover-bg-dark flex aic jcc">Learn More<i class='bx bx-right-arrow-alt fs-lg'></i></a>
 				</div>
 			</div>
 		</section>
