more sections added

--- a/index.html
+++ b/index.html
@@ -20,32 +20,71 @@
 		</header>
 		<main class="p-xl">
 			<p class="fs-xl txt-red fw-300">Nurturing Genuine Bonds for Lifelong Fulfillment</p>
-			<lottie-player src="https://lottie.host/e9991645-ec0a-4360-b845-02d8acb0dd29/HcmO2JJQ7k.json" background="transparent" speed="2" loop autoplay direction="1" mode="normal" class="w-full flex jcc aic"></lottie-player>
+			<lottie-player src="https://lottie.host/e9991645-ec0a-4360-b845-02d8acb0dd29/HcmO2JJQ7k.json" background="transparent" speed="2" loop autoplay direction="1" mode="normal" class="w-full flex jcc aic aspect-square"></lottie-player>
 			<h1 class="fs-xxl fw-600 pb-md">Empower Your Connections with Personal Relationship Advisory</h1>
 			<p class="fs-lg pb-xxl fw-300">Let's Cultivate Your Personal Journey Together</p>
-			<a href="#" class="px-xl py-lg fs-lg bg-red txt-white hover-bg-dark flex aic jcc">Join Now<i class='bx bx-right-arrow-alt fs-xxl'></i></a>
+			<a href="#" class="px-xl py-sm fs-lg bg-red txt-white hover-bg-dark flex aic jcc">Join Now<i class='bx bx-right-arrow-alt fs-xxl'></i></a>
 		</main>
-		<section class="bg-red-300 p-xl">
+		<section id="services" class="bg-red-300 p-xl">
 			<h2 class="fs-xxl fw-600 pb-md">Services</h2>
 			<p class="fs-lg pb-xxl fw-300">We Offer a Range of Services to Help You Build Stronger Relationships</p>
 			<div class="flex fdc gap-lg">
-				<div class="flex-1 bg-white p-lg br-8">
+				<div class="flex-1 bg-white p-lg br-sm">
 					<h3 class="fs-lg fw-600 pb-md">Personal Relationship Advisory</h3>
 					<p class="fs-md fw-300 pb-lg">Get Personalized Relationship Advice from Experts</p>
-					<a href="#" class="px-lg py-8 fs-md bg-red txt-white hover-bg-dark flex aic jcc">Learn More<i class='bx bx-right-arrow-alt fs-lg'></i></a>
+					<a href="#" class="p-sm fs-lg bg-red txt-white hover-bg-dark flex aic jcc">Learn More<i class='bx bx-right-arrow-alt fs-xxl'></i></a>
 				</div>
-				<div class="flex-1 bg-white p-lg br-8">
+				<div class="flex-1 bg-white p-lg br-sm">
 					<h3 class="fs-lg fw-600 pb-md">Couples Therapy</h3>
 					<p class="fs-md fw-300 pb-lg">Resolve Conflicts and Strengthen Your Relationship</p>
-					<a href="#" class="px-lg py-8 fs-md bg-red txt-white hover-bg-dark flex aic jcc">Learn More<i class='bx bx-right-arrow-alt fs-lg'></i></a>
+					<a href="#" class="p-sm fs-lg bg-red txt-white hover-bg-dark flex aic jcc">Learn More<i class='bx bx-right-arrow-alt fs-xxl'></i></a>
 				</div>
-				<div class="flex-1 bg-white p-lg br-8">
+				<div class="flex-1 bg-white p-lg br-sm">
 					<h3 class="fs-lg fw-600 pb-md">Family Counseling</h3>
 					<p class="fs-md fw-300 pb-lg">Build Stronger Bonds with Your Family Members</p>
-					<a href="#" class="px-lg py-8 fs-md bg-red txt-white hover-bg-dark flex aic jcc">Learn More<i class='bx bx-right-arrow-alt fs-lg'></i></a>
+					<a href="#" class="p-sm fs-lg bg-red txt-white hover-bg-dark flex aic jcc">Learn More<i class='bx bx-right-arrow-alt fs-xxl'></i></a>
 				</div>
 			</div>
 		</section>
+		<section id="about" class="p-xl">
+			<h2 class="fs-xxl fw-600 pb-md">About</h2>
+			<p class="fs-lg pb-xxl fw-300">Learn More About Priyanka PRA</p>
+			<div class="flex fdc gap-lg">
+				<div class="bg-red-300 p-lg br-sm">
+					<h3 class="fs-lg fw-600 pb-md">Our Mission</h3>
+					<p class="fs-md fw-300 pb-lg">Our Mission is to Help You Build Stronger Relationships</p>
+					<a href="#" class="p-sm fs-lg bg-red txt-white hover-bg-dark flex aic jcc">Learn More<i class='bx bx-right-arrow-alt fs-xxl'></i></a>
+				</div>
+				<div class="bg-red-300 p-lg br-sm">
+					<h3 class="fs-lg fw-600 pb-md">Our Vision</h3>
+					<p class="fs-md fw-300 pb-lg">Our Vision is to Create a World of Stronger Bonds</p>
+					<a href="#" class="p-sm fs-lg bg-red txt-white hover-bg-dark flex aic jcc">Learn More<i class='bx bx-right-arrow-alt fs-xxl'></i></a>
+				</div>
+			</div>
+		</section>
+		<section id="contact" class="bg-red-300 p-xl">
+			<h2 class="fs-xxl fw-600 pb-md">Contact</h2>
+			<p class="fs-lg pb-xxl fw-300">Get in Touch with Us</p>
+			<div class="flex fdc gap-lg">
+				<div class="bg-white p-lg br-sm">
+					<h3 class="fs-lg fw-600 pb-md">Contact Information</h3>
+					<p class="fs-md fw-300 pb-lg">Email: <a class="txt-red fw-500" href="mailto:info.priyankapra@gmail.com">info.priyankapra@gmail.com</a></p>
+					<p class="fs-md fw-300 pb-lg">Phone: <a class="txt-red fw-500" href="tel:+919910839142">+919910839142</a></p>
+				</div>
+				<div class="bg-white p-lg br-sm">
+					<h3 class="fs-lg fw-600 pb-md">Contact Form</h3>
+					<form action="#" method="POST" class="flex fdc gap-md">
+						<input type="text" name="name" placeholder="Name" class="p-sm br-sm" />
+						<input type="email" name="email" placeholder="Email" class="p-sm br-sm" />
+						<textarea name="message" placeholder="Message" class="p-sm br-sm"></textarea>
+						<button type="submit" class="p-sm fs-lg bg-red txt-white hover-bg-dark flex aic jcc">Submit<i class='bx bx-right-arrow-alt fs-xxl'></i></button>
+					</form>
+				</div>
+			</div>
+		</section>
+		<footer class="bg-light p-xl h-64">
+			<p class="fs-md txt-red fw-300 tac">© 2024 Priyanka PRA. All Rights Reserved.</p>
+		</footer>
 		<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 	</body>
 </html>
