--- a/index.html
+++ b/index.html
@@ -16,74 +16,281 @@
 	</head>
 	<body>
 		<header class="flex bg-light h-80 p-xl sticky t-0 z-10">
-			<a href="/" class="fs-xxl flex aic jcc font-code gap-sm">Priyanka<span class="txt-red">PRA</span></a>
+			<a href="/" class="fs-xxl flex aic jcc font-code gap-sm"
+				>Priyanka<span class="txt-blue">PRA</span></a
+			>
 		</header>
-		<main class="p-xl">
-			<p class="fs-xl txt-red fw-300">Nurturing Genuine Bonds for Lifelong Fulfillment</p>
-			<lottie-player src="https://lottie.host/e9991645-ec0a-4360-b845-02d8acb0dd29/HcmO2JJQ7k.json" background="transparent" speed="2" loop autoplay direction="1" mode="normal" class="w-full flex jcc aic aspect-square"></lottie-player>
-			<h1 class="fs-xxl fw-600 pb-md">Empower Your Connections with Personal Relationship Advisory</h1>
-			<p class="fs-lg pb-xxl fw-300">Let's Cultivate Your Personal Journey Together</p>
-			<a href="#" class="px-xl py-sm fs-lg bg-red txt-white hover-bg-dark flex aic jcc">Join Now<i class='bx bx-right-arrow-alt fs-xxl'></i></a>
+		<main class="p-xl container">
+			<p class="fs-xl txt-blue fw-300">
+				Nurturing Genuine Bonds for Lifelong Fulfillment
+			</p>
+			<!-- <lottie-player
+				src="https://lottie.host/e9991645-ec0a-4360-b845-02d8acb0dd29/HcmO2JJQ7k.json"
+				background="transparent"
+				speed="2"
+				loop
+				autoplay
+				direction="1"
+				mode="normal"
+				class="w-full flex jcc aic aspect-square"></lottie-player> -->
+			<h1 class="fs-xxl fw-600 pb-md">
+				Empower Your Connections with Personal Relationship Advisory
+			</h1>
+			<p class="fs-lg pb-xxl fw-300">
+				Let's Cultivate Your Personal Journey Together
+			</p>
+			<a
+				href="#"
+				class="px-xl py-sm fs-lg bg-blue txt-white hover-bg-dark flex aic jcc"
+				>Join Now<i class="bx bx-right-arrow-alt fs-xxl"></i
+			></a>
 		</main>
-		<section id="services" class="bg-red-300 p-xl">
+		<section id="services" class="bg-blue-300 p-xl container">
 			<h2 class="fs-xxl fw-600 pb-md">Services</h2>
-			<p class="fs-lg pb-xxl fw-300">We Offer a Range of Services to Help You Build Stronger Relationships</p>
-			<div class="flex fdc gap-lg">
+			<p class="fs-lg pb-xxl fw-300">
+				Unlock the Power of Personal Connections with Our Range of Services
+			</p>
+			<div class="flex fdc gap-lg lg-fdr lg-jcc">
 				<div class="flex-1 bg-white p-lg br-sm">
 					<h3 class="fs-lg fw-600 pb-md">Personal Relationship Advisory</h3>
-					<p class="fs-md fw-300 pb-lg">Get Personalized Relationship Advice from Experts</p>
-					<a href="#" class="p-sm fs-lg bg-red txt-white hover-bg-dark flex aic jcc">Learn More<i class='bx bx-right-arrow-alt fs-xxl'></i></a>
+					<p class="fs-md fw-300 pb-lg">
+						Dive into Personalized Relationship Guidance Tailored Just for You by Our Experienced Advisors
+					</p>
+					<a href="#" class="p-sm fs-lg bg-blue txt-white hover-bg-dark flex aic jcc">
+						Learn More <i class="bx bx-right-arrow-alt fs-xxl"></i>
+					</a>
 				</div>
 				<div class="flex-1 bg-white p-lg br-sm">
 					<h3 class="fs-lg fw-600 pb-md">Couples Therapy</h3>
-					<p class="fs-md fw-300 pb-lg">Resolve Conflicts and Strengthen Your Relationship</p>
-					<a href="#" class="p-sm fs-lg bg-red txt-white hover-bg-dark flex aic jcc">Learn More<i class='bx bx-right-arrow-alt fs-xxl'></i></a>
+					<p class="fs-md fw-300 pb-lg">
+						Overcome Relationship Hurdles and Strengthen Your Bond with Our Expert Couples Counseling
+					</p>
+					<a href="#" class="p-sm fs-lg bg-blue txt-white hover-bg-dark flex aic jcc">
+						Learn More <i class="bx bx-right-arrow-alt fs-xxl"></i>
+					</a>
 				</div>
 				<div class="flex-1 bg-white p-lg br-sm">
 					<h3 class="fs-lg fw-600 pb-md">Family Counseling</h3>
-					<p class="fs-md fw-300 pb-lg">Build Stronger Bonds with Your Family Members</p>
-					<a href="#" class="p-sm fs-lg bg-red txt-white hover-bg-dark flex aic jcc">Learn More<i class='bx bx-right-arrow-alt fs-xxl'></i></a>
+					<p class="fs-md fw-300 pb-lg">
+						Foster Deeper Connections and Resolve Conflicts within Your Family Dynamic with Our Supportive Counseling Sessions
+					</p>
+					<a href="#" class="p-sm fs-lg bg-blue txt-white hover-bg-dark flex aic jcc">
+						Learn More <i class="bx bx-right-arrow-alt fs-xxl"></i>
+					</a>
+				</div>
+				<div class="flex-1 bg-white p-lg br-sm">
+					<h3 class="fs-lg fw-600 pb-md">Individual Counseling</h3>
+					<p class="fs-md fw-300 pb-lg">
+						Receive Personalized Support and Guidance to Address Individual Challenges and Enhance Personal Growth
+					</p>
+					<a href="#" class="p-sm fs-lg bg-blue txt-white hover-bg-dark flex aic jcc">
+						Learn More <i class="bx bx-right-arrow-alt fs-xxl"></i>
+					</a>
+				</div>
+				<!-- <div class="flex-1 bg-white p-lg br-sm">
+					<h3 class="fs-lg fw-600 pb-md">Pre-marital Counseling</h3>
+					<p class="fs-md fw-300 pb-lg">
+						Prepare for a Strong and Healthy Marriage with Our Pre-marital Counseling Services, Focused on Communication and Conflict Resolution
+					</p>
+					<a href="#" class="p-sm fs-lg bg-blue txt-white hover-bg-dark flex aic jcc">
+						Learn More <i class="bx bx-right-arrow-alt fs-xxl"></i>
+					</a>
+				</div> -->
+				<div class="flex-1 bg-white p-lg br-sm">
+					<h3 class="fs-lg fw-600 pb-md">Parenting Support</h3>
+					<p class="fs-md fw-300 pb-lg">
+						Gain Valuable Guidance and Resources to Navigate the Challenges of Parenting and Foster a Positive Parent-Child Relationship
+					</p>
+					<a href="#" class="p-sm fs-lg bg-blue txt-white hover-bg-dark flex aic jcc">
+						Learn More <i class="bx bx-right-arrow-alt fs-xxl"></i>
+					</a>
+				</div>
+				<!-- <div class="flex-1 bg-white p-lg br-sm">
+					<h3 class="fs-lg fw-600 pb-md">Divorce Counseling</h3>
+					<p class="fs-md fw-300 pb-lg">
+						Receive Compassionate Support and Guidance to Navigate the Emotional Challenges of Divorce and Transition to a New Chapter in Your Life
+					</p>
+					<a href="#" class="p-sm fs-lg bg-blue txt-white hover-bg-dark flex aic jcc">
+						Learn More <i class="bx bx-right-arrow-alt fs-xxl"></i>
+					</a>
+				</div> -->
+				<!-- <div class="flex-1 bg-white p-lg br-sm">
+					<h3 class="fs-lg fw-600 pb-md">Self-Esteem Workshops</h3>
+					<p class="fs-md fw-300 pb-lg">
+						Participate in Engaging Workshops Designed to Boost Self-Esteem, Confidence, and Assertiveness for Improved Relationships and Personal Well-being
+					</p>
+					<a href="#" class="p-sm fs-lg bg-blue txt-white hover-bg-dark flex aic jcc">
+						Learn More <i class="bx bx-right-arrow-alt fs-xxl"></i>
+					</a>
+				</div> -->
+				<!-- <div class="flex-1 bg-white p-lg br-sm">
+					<h3 class="fs-lg fw-600 pb-md">Communication Skills Training</h3>
+					<p class="fs-md fw-300 pb-lg">
+						Enhance Your Communication Skills, Active Listening, and Conflict Resolution Techniques through our Practical Training Programs for Stronger Relationships and Personal Growth
+					</p>
+					<a href="#" class="p-sm fs-lg bg-blue txt-white hover-bg-dark flex aic jcc">
+						Learn More <i class="bx bx-right-arrow-alt fs-xxl"></i>
+					</a>
+				</div> -->
+				<div class="flex-1 bg-white p-lg br-sm">
+					<h3 class="fs-lg fw-600 pb-md">Life Coaching</h3>
+					<p class="fs-md fw-300 pb-lg">
+						Partner with a Certified Life Coach to Set and Achieve Personal and Relationship Goals, Maximize Your Potential, and Create a Fulfilling Life
+					</p>
+					<a href="#" class="p-sm fs-lg bg-blue txt-white hover-bg-dark flex aic jcc">
+						Learn More <i class="bx bx-right-arrow-alt fs-xxl"></i>
+					</a>
 				</div>
 			</div>
-		</section>
-		<section id="about" class="p-xl">
+		</section>		
+		<section id="about" class="p-xl container">
 			<h2 class="fs-xxl fw-600 pb-md">About</h2>
 			<p class="fs-lg pb-xxl fw-300">Learn More About Priyanka PRA</p>
-			<div class="flex fdc gap-lg">
-				<div class="bg-red-300 p-lg br-sm">
+			<div class="flex fdc gap-lg lg-fdr lg-jcc">
+				<div class="bg-blue-300 p-lg br-sm">
 					<h3 class="fs-lg fw-600 pb-md">Our Mission</h3>
-					<p class="fs-md fw-300 pb-lg">Our Mission is to Help You Build Stronger Relationships</p>
-					<a href="#" class="p-sm fs-lg bg-red txt-white hover-bg-dark flex aic jcc">Learn More<i class='bx bx-right-arrow-alt fs-xxl'></i></a>
+					<p class="fs-md fw-300 pb-lg">
+						At Priyanka PRA, our mission is to empower individuals to build stronger, more fulfilling relationships through personalized guidance and support tailored to their unique needs and goals.
+					</p>
+					<a href="#" class="p-sm fs-lg bg-blue txt-white hover-bg-dark flex aic jcc">
+						Learn More <i class="bx bx-right-arrow-alt fs-xxl"></i>
+					</a>
 				</div>
-				<div class="bg-red-300 p-lg br-sm">
+				<div class="bg-blue-300 p-lg br-sm">
 					<h3 class="fs-lg fw-600 pb-md">Our Vision</h3>
-					<p class="fs-md fw-300 pb-lg">Our Vision is to Create a World of Stronger Bonds</p>
-					<a href="#" class="p-sm fs-lg bg-red txt-white hover-bg-dark flex aic jcc">Learn More<i class='bx bx-right-arrow-alt fs-xxl'></i></a>
+					<p class="fs-md fw-300 pb-lg">
+						Our vision at Priyanka PRA is to cultivate a world where meaningful connections thrive, fostering empathy, understanding, and mutual respect in all aspects of life.
+					</p>
+					<a href="#" class="p-sm fs-lg bg-blue txt-white hover-bg-dark flex aic jcc">
+						Learn More <i class="bx bx-right-arrow-alt fs-xxl"></i>
+					</a>
 				</div>
 			</div>
 		</section>
-		<section id="contact" class="bg-red-300 p-xl">
+		
+		<section id="faq" class="bg-blue-300 p-xl container">
+			<h2 class="fs-xxl fw-600 pb-md">FAQ</h2>
+			<p class="fs-lg pb-xxl fw-300">Frequently Asked Questions</p>
+			<details class="bg-white p-lg br-sm">
+				<summary class="fs-lg fw-600 pb-md">
+					What is Personal Relationship Advisory (PRA)?
+				</summary>
+				<p class="fs-md fw-300 pb-lg">
+					Personal Relationship Advisory (PRA) is a tailored advisory
+					service focused on nurturing genuine bonds and fostering
+					lifelong fulfillment in personal relationships. Our expert
+					guidance helps individuals navigate various aspects of their
+					personal lives to achieve greater happiness and satisfaction.
+				</p>
+			</details>
+			<details class="bg-white p-lg br-sm">
+				<summary class="fs-lg fw-600 pb-md">
+					What types of services does Priyanka PRA offer?
+				</summary>
+				<p class="fs-md fw-300 pb-lg">
+					Priyanka PRA offers a range of services to help individuals
+					build stronger relationships, including Personal Relationship
+					Advisory, Couples Therapy, and Family Counseling. Each
+					service is personalized to address the unique needs and goals
+					of our clients.
+				</p>
+			</details>
+			<details class="bg-white p-lg br-sm">
+				<summary class="fs-lg fw-600 pb-md">
+					How does the advisory process work?
+				</summary>
+				<p class="fs-md fw-300 pb-lg">
+					The advisory process begins with an initial consultation to
+					understand your specific challenges and goals. From there, we
+					develop a customized plan tailored to your needs. Throughout
+					the process, we provide ongoing support, guidance, and
+					resources to help you achieve your desired outcomes.
+				</p>
+			</details>
+			<details class="bg-white p-lg br-sm">
+				<summary class="fs-lg fw-600 pb-md">
+					Is Priyanka PRA confidential?
+				</summary>
+				<p class="fs-md fw-300 pb-lg">
+					Yes, confidentiality is of utmost importance to us. We adhere
+					to strict privacy policies to ensure that all client
+					information remains confidential and secure.
+				</p>
+			</details>
+			<details class="bg-white p-lg br-sm">
+				<summary class="fs-lg fw-600 pb-md">
+					How long does each advisory session last?
+				</summary>
+				<p class="fs-md fw-300 pb-lg">
+					The duration of each advisory session may vary depending on
+					the specific needs and goals of the client. Typically,
+					sessions range from 60 to 90 minutes, but we can adjust the
+					length as needed to ensure thorough and effective support.
+				</p>
+			</details>
+			<details class="bg-white p-lg br-sm">
+				<summary class="fs-lg fw-600 pb-md">
+					What if I'm not satisfied with the advisory services?
+				</summary>
+				<p class="fs-md fw-300 pb-lg">
+					Your satisfaction is our top priority. If you're not
+					completely satisfied with our services, please let us know,
+					and we will do our best to address your concerns and make
+					things right.
+				</p>
+			</details>
+		</section>
+		<section id="contact" class="bg-blue-300 p-xl container">
 			<h2 class="fs-xxl fw-600 pb-md">Contact</h2>
 			<p class="fs-lg pb-xxl fw-300">Get in Touch with Us</p>
 			<div class="flex fdc gap-lg">
 				<div class="bg-white p-lg br-sm">
 					<h3 class="fs-lg fw-600 pb-md">Contact Information</h3>
-					<p class="fs-md fw-300 pb-lg">Email: <a class="txt-red fw-500" href="mailto:info.priyankapra@gmail.com">info.priyankapra@gmail.com</a></p>
-					<p class="fs-md fw-300 pb-lg">Phone: <a class="txt-red fw-500" href="tel:+919910839142">+919910839142</a></p>
+					<p class="fs-md fw-300 pb-lg">
+						Email:
+						<a
+							class="txt-blue fw-500"
+							href="mailto:info.priyankapra@gmail.com"
+							>info.priyankapra@gmail.com</a
+						>
+					</p>
+					<p class="fs-md fw-300 pb-lg">
+						Phone:
+						<a class="txt-blue fw-500" href="tel:+919910839142"
+							>+919910839142</a
+						>
+					</p>
 				</div>
 				<div class="bg-white p-lg br-sm">
 					<h3 class="fs-lg fw-600 pb-md">Contact Form</h3>
 					<form action="#" method="POST" class="flex fdc gap-md">
-						<input type="text" name="name" placeholder="Name" class="p-sm br-sm" />
-						<input type="email" name="email" placeholder="Email" class="p-sm br-sm" />
-						<textarea name="message" placeholder="Message" class="p-sm br-sm"></textarea>
-						<button type="submit" class="p-sm fs-lg bg-red txt-white hover-bg-dark flex aic jcc">Submit<i class='bx bx-right-arrow-alt fs-xxl'></i></button>
+						<input
+							type="text"
+							name="name"
+							placeholder="Name"
+							class="p-sm br-sm" />
+						<input
+							type="email"
+							name="email"
+							placeholder="Email"
+							class="p-sm br-sm" />
+						<textarea
+							name="message"
+							placeholder="Message"
+							class="p-sm br-sm"></textarea>
+						<button
+							type="submit"
+							class="p-sm fs-lg bg-blue txt-white hover-bg-dark flex aic jcc">
+							Submit<i class="bx bx-right-arrow-alt fs-xxl"></i>
+						</button>
 					</form>
 				</div>
 			</div>
 		</section>
 		<footer class="bg-light p-xl h-64">
-			<p class="fs-md txt-red fw-300 tac">© 2024 Priyanka PRA. All Rights Reserved.</p>
+			<p class="fs-md txt-blue fw-300 tac">
+				© 2024 Priyanka PRA. All Rights Reserved.
+			</p>
 		</footer>
 		<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 	</body>
